--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "esbuild": "^0.13.8",
     "miniflare": "^1.4.1"
+  },
+  "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.1.3",
+    "itty-router": "^2.4.4"
   }
 }
